monticore-generator/src/test/resources/cocos/invalid/A4119/A4119.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4119;

grammar A4119 {

  @Override
  @Override
  A = "";

}
